tests/fixtures/invalid/list_floordiv_list.py
# Cannot floor divide List[int] and List[int]
x: list[int] = [1, 2, 3] // [1, 2, 3]
